<resources>
    <string name="app_name">SOFT7035_Mobile_Assignement</string>
    <string name="Second_Activity">Second Activity</string>
    <string name="Translate">Translate</string>
    <string name="Input_Text">Input Text</string>
    <string name="Morse_tranlation">Morse Translation</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="data_should_appear_here">Data should Appear here</string>
    <string name="pick_color">Pick a Color</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="Color_Red">Red</string>
    <string name="Color_Green">Green</string>
    <string name="Color_Blue">Blue</string>
    <string name="Third_Activity">Third Activity</string>
    <string name="color_picked">The color you choose is :</string>
    <string name="Main_Actvity">Go back to Main activity</string>
    <string name="Send_Notification">Send a Notification</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="generate_Map">Open Google Map</string>
</resources>
