<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ie.murermycit.rudy.mobileassignement.MainActivity">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/mTranslation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="24dp"
                android:layout_margin="16dp"
                android:text="@string/Morse_tranlation" />

            <EditText
                android:id="@+id/mInputText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textAutoComplete"
                android:layout_margin="16dp"
                android:text="@string/Input_Text" />

            <Button
                android:id="@+id/mTranslateButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Translate" />

            <Button
                android:layout_marginTop="16dp"
                android:id="@+id/mSecondActivityButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Second_Activity" />
            <TextView
                android:id="@+id/mData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="24dp"
                android:layout_margin="16dp"
                />


        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
