<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SecondActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/mDataPassedTextview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="32sp"
            android:textColor="@color/colorPrimary"
            android:text="@string/data_should_appear_here" />

        <Button
            android:id="@+id/mGenerateDialog"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:text="@string/pick_color" />
        <Button
            android:id="@+id/mGenerateMap"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:text="@string/generate_Map" />

        <fragment android:id="@+id/map"
            android:layout_marginTop="48dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            class="com.google.android.gms.maps.SupportMapFragment"
            xmlns:android="http://schemas.android.com/apk/res/android" />


    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>